--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URL = mongodb+srv://sushi:sushi@cluster.tnctrce.mongodb.net/sushi?retryWrites=true&w=majority
+MONGO_URL = 
 ADMIN_USERNAME = admin
 ADMIN_PASSWORD = 123456
 TOKEN = Qwertyu||12345678;;A
